--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,13 @@
       font-size: 16px;
     }
   </style>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
+
+
 </head>
 <body>
+  <div id="cameraCoords" style="position:fixed;top:10px;left:10px;background:#fff;padding:5px;z-index:1000;font-family:monospace"></div>
   <button id="startBtn">ابدأ اللعب</button>
   <script type="module" src="script.js"></script>
 </body>
